5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4132/executions/1723_2498.log
== SUBMITION (2019-05-09 10:46:38) 
-- CODE:

a = int(input("Digite a hab a: "))
b = int(input("Digite a hab b: "))
pa = int(input("Digite a hab pa: "))/100
pb = int(input("Digite a hab pb: "))/100

anos =0
aa = a*pa
ab = b *pb
while(aa<=ab):
	aa = aa+aa
	ab=ab+ab
	anos = anos + 1
	
print(anos)
	
-- EXECUTION TIME:
0.126481
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2498/main.py", line 4, in <module>
    pa = int(input())/100
ValueError: invalid literal for int() with base 10: '35.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:46:44) 
-- CODE:

a = int(input("Digite a hab a: "))
b = int(input("Digite a hab b: "))
pa = int(input("Digite a hab pa: "))/100
pb = int(input("Digite a hab pb: "))/100

anos =0
aa = a*pa
ab = b *pb
while(aa<=ab):
	aa = aa+aa
	ab=ab+ab
	anos = anos + 1
	
print(anos)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    pa = int(input())/100
ValueError: invalid literal for int() with base 10: '35.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:47:24) 
-- CODE:

a = int(input("Digite a hab a: "))
b = int(input("Digite a hab b: "))
pa = float(input("Digite a hab pa: "))/100
pb = float(input("Digite a hab pb: "))/100

anos =0
aa = a*pa
ab = b *pb
while(aa<=ab):
	aa = aa+aa
	ab=ab+ab
	anos = anos + 1
	
print(anos)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    pa = int(input())/100
ValueError: invalid literal for int() with base 10: '35.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:48:36) 
-- CODE:

a = int(input("Digite a hab a: "))
b = int(input("Digite a hab b: "))
pa = float(input("Digite a hab pa: "))/100
pb = float(input("Digite a hab pb: "))/100

anos =0
aa = a*pa
ab = b *pb
while(aa<=ab):
	aa = a*pa
	ab= b *pb
	anos = anos + 1
	
print(anos)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    pa = int(input())/100
ValueError: invalid literal for int() with base 10: '35.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:49:25) 
-- CODE:

a = int(input("Digite a hab a: "))
b = int(input("Digite a hab b: "))
pa = float(input("Digite a hab pa: "))/100
pb = float(input("Digite a hab pb: "))/100

anos =0

while(aa<=ab):
	aa = a*pa
	ab= b *pb
	anos = anos + 1
	
print(anos)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while(aa<=ab):
NameError: name 'aa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:50:20) 
-- CODE:

a = int(input("Digite a hab a: "))
b = int(input("Digite a hab b: "))
pa = float(input("Digite a hab pa: "))/100
pb = float(input("Digite a hab pb: "))/100

anos =0
aa = 0
ab = 0
while(aa<=ab):
	aa = a*pa
	ab= b *pb
	anos = anos + 1
	
print(anos)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:50:47) 
-- CODE:

a = int(input("Digite a hab a: "))
b = int(input("Digite a hab b: "))
pa = float(input("Digite a hab pa: "))/100
pb = float(input("Digite a hab pb: "))/100

anos =0
aa = 0
ab = 0
while(aa<=ab):
	aa = a*pa
	ab= b *pb
	anos = anos + 1
	
print(anos)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:51:50) 
-- CODE:

a = int(input("Digite a hab a: "))
b = int(input("Digite a hab b: "))
pa = float(input("Digite a hab pa: "))
pb = float(input("Digite a hab pb: "))

pa = pa/100
pb = pb/100
anos =0
soma1 = 0
soma2 =0
while(soma1<=soma2):
	soma1 = a*pa
	soma2= b *pb
	anos = anos + 1
	
print(anos)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:52:34) 
-- CODE:

a = int(input("Digite a hab a: "))
b = int(input("Digite a hab b: "))
pa = float(input("Digite a hab pa: "))
pb = float(input("Digite a hab pb: "))

pa = pa/100
pb = pb/100
anos =0
soma1 = 0
soma2 =0
while(soma1<=soma2):
	soma1 = soma1 + a*pa
	soma2=soma2+ b *pb
	anos = anos + 1
	
print(anos)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:52:58) 
-- CODE:

a = int(input("Digite a hab a: "))
b = int(input("Digite a hab b: "))
pa = float(input("Digite a hab pa: "))
pb = float(input("Digite a hab pb: "))

pa = pa/100
pb = pb/100
anos =0
soma1 = 0
soma2 =0
while(soma1<=soma2):
	soma1 = soma1 + a*pa
	soma2=soma2+ b *pb
	anos = anos + 1
	
print(anos)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:54:48) 
-- CODE:

a = int(input("Digite a hab a: "))
b = int(input("Digite a hab b: "))
pa = float(input("Digite a hab pa: "))/100
pb = float(input("Digite a hab pb: "))/100

anos =0
aa = 0
ab = 0
while(aa<=ab):
	aa = a*pa
	ab= b *pb
	anos = anos + 1
	
print(anos)
	
-- EXECUTION TIME:
0.352832
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
1
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:

-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:54:48) 
-- CODE:

a = int(input("Digite a hab a: "))
b = int(input("Digite a hab b: "))
pa = float(input("Digite a hab pa: "))/100
pb = float(input("Digite a hab pb: "))/100

anos =0
aa = 0
ab = 0
while(aa<=ab):
	aa = a*pa
	ab= b *pb
	anos = anos + 1
	
print(anos)
	
-- EXECUTION TIME:
0.550494
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
1
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:

-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:54:48) 
-- CODE:

a = int(input("Digite a hab a: "))
b = int(input("Digite a hab b: "))
pa = float(input("Digite a hab pa: "))
pb = float(input("Digite a hab pb: "))

pa = pa/100
pb = pb/100
anos =0
soma1 = 0
soma2 =0
while(soma1<=soma2):
	soma1 = soma1 + a*pa
	soma2=soma2+ b *pb
	anos = anos + 1
	
print(anos)
	
-- EXECUTION TIME:
0.961499
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
1
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:

-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:54:48) 
-- CODE:

a = int(input("Digite a hab a: "))
b = int(input("Digite a hab b: "))
pa = float(input("Digite a hab pa: "))/100
pb = float(input("Digite a hab pb: "))/100

anos =0
aa = a*pa
ab = b *pb
while(aa<=ab):
	aa = aa+aa
	ab=ab+ab
	anos = anos + 1
	
print(anos)
	
-- EXECUTION TIME:
0.130964
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
0
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:

-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:54:49) 
-- CODE:

a = int(input("Digite a hab a: "))
b = int(input("Digite a hab b: "))
pa = float(input("Digite a hab pa: "))
pb = float(input("Digite a hab pb: "))

pa = pa/100
pb = pb/100
anos =0
soma1 = 0
soma2 =0
while(soma1<=soma2):
	soma1 = a*pa
	soma2= b *pb
	anos = anos + 1
	
print(anos)
	
-- EXECUTION TIME:
0.761451
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
1
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:

-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:54:49) 
-- CODE:

a = int(input("Digite a hab a: "))
b = int(input("Digite a hab b: "))
pa = float(input("Digite a hab pa: "))
pb = float(input("Digite a hab pb: "))

pa = pa/100
pb = pb/100
anos =0
soma1 = 0
soma2 =0
while(soma1<=soma2):
	soma1 = soma1 + a*pa
	soma2=soma2+ b *pb
	anos = anos + 1
	
print(anos)
	
-- EXECUTION TIME:
1.27815
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
1
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:

-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:55:29) 
-- CODE:
a = int(input("Digite a hab a: "))
b = int(input("Digite a hab b: "))
pa = float(input("Digite a hab pa: "))
pb = float(input("Digite a hab pb: "))

pa = pa/100
pb = pb/100
anos =0
soma1 = 0
soma2 =0
while(soma1<=soma2):
	soma1 = soma1 + a*pa
	soma2=soma2+ b *pb
	anos = anos + 1
	
print(anos)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:55:48) 
-- CODE:
a = int(input("Digite a hab a: "))
b = int(input("Digite a hab b: "))
pa = float(input("Digite a hab pa: "))
pb = float(input("Digite a hab pb: "))

pa = pa/100
pb = pb/100
anos =0
soma1 = 0
soma2 =0
while(soma1<=soma2):
	soma1 = soma1 + a*pa
	soma2=soma2+ b *pb
	anos = anos + 1
	
print(anos)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:56:34) 
-- CODE:
a = int(input("Digite a hab a: "))
b = int(input("Digite a hab b: "))
pa = float(input("Digite a hab pa: "))
pb = float(input("Digite a hab pb: "))

pa = pa/100
pb = pb/100
anos =0
soma1 = a*pa
soma2 =b *pb
while(soma1<soma2):
	soma1 = soma1 + a*pa
	soma2=soma2+ b *pb
	anos = anos + 1
	
print(anos)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:58:36) 
-- CODE:
a = int(input("Digite a hab a: "))
b = int(input("Digite a hab b: "))
cresca = float(input("Digite a hab pa: "))
crescb= float(input("Digite a hab pb: "))

cresca = pa/100
crescb = pb/100
print(crescb)
anos =0
soma1 = a*pa
soma2 =b *pb

while(soma1<soma2):
	soma1 = soma1 + a*pa
	soma2=soma2+ b *pb
	anos = anos + 1
	
print(anos)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    cresca = pa/100
NameError: name 'pa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:59:03) 
-- CODE:
a = int(input("Digite a hab a: "))
b = int(input("Digite a hab b: "))
cresca = float(input("Digite a hab pa: "))
crescb= float(input("Digite a hab pb: "))

cresca = cresca/100
crescb = crescb/100
print(crescb)
anos =0
soma1 = a*pa
soma2 =b *pb

while(soma1<soma2):
	soma1 = soma1 + a*pa
	soma2=soma2+ b *pb
	anos = anos + 1
	
print(anos)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    soma1 = a*pa
NameError: name 'pa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:59:37) 
-- CODE:
a = int(input("Digite a hab a: "))
b = int(input("Digite a hab b: "))
cresca = float(input("Digite a hab pa: "))
crescb= float(input("Digite a hab pb: "))

cresca = cresca/100
crescb = crescb/100
print(crescb)
anos =0
soma1 = a*pa
soma2 =b *pb

while(soma1<soma2):
	soma1 = soma1 + a*pa
	soma2=soma2+ b *pb
	anos = anos + 1
	
print(anos)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    soma1 = a*pa
NameError: name 'pa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:01:20) 
-- CODE:
a = int(input("Digite a hab a: "))
b = int(input("Digite a hab b: "))
cresca = float(input("Digite a hab pa: "))
crescb= float(input("Digite a hab pb: "))

cresca = cresca/100
crescb = crescb/100

anos =0
soma1 = a*cresca
soma2 =b *crescb

while(soma1<soma2):
	soma1 = soma1 + a*cresca
	soma2=soma2+ b *crescb
	anos = anos + 1
	
print(anos)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    soma1 = a*pa
NameError: name 'pa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:02:04) 
-- CODE:
a = int(input("Digite a hab a: "))
b = int(input("Digite a hab b: "))
cresca = float(input("Digite a hab pa: "))
crescb= float(input("Digite a hab pb: "))

cresca = cresca/100
crescb = crescb/100

anos =0
soma1 = a*cresca
soma2 =b *crescb

while(soma1>soma2):
	soma1 = soma1 + a*cresca
	soma2=soma2+ b *crescb
	anos = anos + 1
	
print(anos)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    soma1 = a*pa
NameError: name 'pa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:03:46) 
-- CODE:
a = int(input("Digite a hab a: "))
b = int(input("Digite a hab b: "))
cresca = float(input("Digite a hab pa: "))
crescb= float(input("Digite a hab pb: "))

cresca = cresca/100
crescb = crescb/100

anos =0
soma1 = a * cresca
soma2 = b * crescb

while(soma1<=soma2):
	soma1 = soma1 + a*cresca
	soma2=soma2+ b *crescb
	anos = anos + 1
	
print(anos)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    soma1 = a*pa
NameError: name 'pa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:04:14) 
-- CODE:
a = int(input("Digite a hab a: "))
b = int(input("Digite a hab b: "))
cresca = float(input("Digite a hab pa: "))
crescb= float(input("Digite a hab pb: "))

cresca = cresca/100
crescb = crescb/100

anos =0
soma1 = a * cresca
soma2 = b * crescb

while(soma1<soma2):
	soma1 = soma1 + a*cresca
	soma2=soma2+ b *crescb
	anos = anos + 1
	
print(anos)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    soma1 = a*pa
NameError: name 'pa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:05:28) 
-- CODE:
a = int(input("Digite a hab a: "))
b = int(input("Digite a hab b: "))
cresca = float(input("Digite a hab pa: "))
crescb= float(input("Digite a hab pb: "))

cresca = cresca/100
crescb = crescb/100

anos =0
soma1 = 0
soma2 = 0

while(soma1<soma2):
	soma1 = a + a*cresca
	soma2=b+ b *crescb
	anos = anos + 1
	
print(anos)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    soma1 = a*pa
NameError: name 'pa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:06:21) 
-- CODE:
a = int(input("Digite a hab a: "))
b = int(input("Digite a hab b: "))
cresca = float(input("Digite a hab pa: "))
crescb= float(input("Digite a hab pb: "))

cresca = cresca/100
crescb = crescb/100

anos =0
while(soma1<=soma2):
	a = a + a*cresca
	b=  b + b *crescb
	anos = anos + 1
	
print(anos)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    while(soma1<=soma2):
NameError: name 'soma1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:06:40) 
-- CODE:
a = int(input("Digite a hab a: "))
b = int(input("Digite a hab b: "))
cresca = float(input("Digite a hab pa: "))
crescb= float(input("Digite a hab pb: "))

cresca = cresca/100
crescb = crescb/100

anos =0
while(a<b):
	a = a + a*cresca
	b=  b + b *crescb
	anos = anos + 1
	
print(anos)
	
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:06:55) 
-- CODE:
a = int(input("Digite a hab a: "))
b = int(input("Digite a hab b: "))
cresca = float(input("Digite a hab pa: "))
crescb= float(input("Digite a hab pb: "))

cresca = cresca/100
crescb = crescb/100

anos =0
while(a<b):
	a = a + a*cresca
	b=  b + b *crescb
	anos = anos + 1
	
print(anos)
	
-- EXECUTION TIME:
1.60882
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:07:02) 
-- CODE:
a = int(input("Digite a hab a: "))
b = int(input("Digite a hab b: "))
pa = float(input("Digite a hab pa: "))
pb = float(input("Digite a hab pb: "))

pa = pa/100
pb = pb/100
anos =0
soma1 = 0
soma2 =0
while(soma1<=soma2):
	soma1 = soma1 + a*pa
	soma2=soma2+ b *pb
	anos = anos + 1
	
print(anos)
	
-- EXECUTION TIME:
0.228802
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
1
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:

-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:07:21) 
-- CODE:
a = int(input("Digite a hab a: "))
b = int(input("Digite a hab b: "))
cresca = float(input("Digite a hab pa: "))
crescb= float(input("Digite a hab pb: "))

cresca = cresca/100
crescb = crescb/100

anos =0
while(a<b):
	a = a + a*cresca
	b =  b + b *crescb
	anos = anos + 1
	
print(anos)
	
-- EXECUTION TIME:
1.04393
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:22:20) 
-- CODE:
a = int(input("Digite a hab a: "))
b = int(input("Digite a hab b: "))
cresca = float(input("Digite a hab pa: "))
crescb= float(input("Digite a hab pb: "))

cresca = cresca/100
crescb = crescb/100
print(crescb)
anos =0
soma1 = a*cresca
soma2 =b *crescb

while(soma1<soma2):
	soma1 = soma1 + a*cresca
	soma2=soma2+ b *crescb
	anos = anos + 1
	
print(anos)
	
-- EXECUTION TIME:
0.358239
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
0.105
0
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:

-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:22:20) 
-- CODE:
a = int(input("Digite a hab a: "))
b = int(input("Digite a hab b: "))
cresca = float(input("Digite a hab pa: "))
crescb= float(input("Digite a hab pb: "))

cresca = cresca/100
crescb = crescb/100

anos =0
soma1 = a*cresca
soma2 =b *crescb

while(soma1<soma2):
	soma1 = soma1 + a*cresca
	soma2=soma2+ b *crescb
	anos = anos + 1
	
print(anos)
	
-- EXECUTION TIME:
0.581709
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
0
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:

-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:22:20) 
-- CODE:
a = int(input("Digite a hab a: "))
b = int(input("Digite a hab b: "))
cresca = float(input("Digite a hab pa: "))
crescb= float(input("Digite a hab pb: "))

cresca = cresca/100
crescb = crescb/100

anos =0
soma1 = a*cresca
soma2 =b *crescb

while(soma1>soma2):
	soma1 = soma1 + a*cresca
	soma2=soma2+ b *crescb
	anos = anos + 1
	
print(anos)
	
-- EXECUTION TIME:
1220.56
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:

-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:22:20) 
-- CODE:
a = int(input("Digite a hab a: "))
b = int(input("Digite a hab b: "))
cresca = float(input("Digite a hab pa: "))
crescb= float(input("Digite a hab pb: "))

cresca = cresca/100
crescb = crescb/100

anos =0
soma1 = 0
soma2 = 0

while(soma1<=soma2):
	soma1 = a + a*cresca
	soma2=  b + b *crescb
	anos = anos + 1
	
print(anos)
	
-- EXECUTION TIME:
981.84
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:

-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:23:16) 
-- CODE:
a = int(input("Digite a hab a: "))
b = int(input("Digite a hab b: "))
cresca = float(input("Digite a hab pa: "))
crescb= float(input("Digite a hab pb: "))

cresca = cresca/100
crescb = crescb/100

anos =0
while(a<b):
	a = a + a*cresca
	b =  b + b *crescb
	anos = anos + 1
	
print(anos)
	
-- EXECUTION TIME:
0.166602
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
